@@ -3,4 +3,5 @@
 /Makefile
 /Makefile.in
 /find
+/getlimits
 /libfindtools.a
