@@ -38,6 +38,8 @@ LDADD = libfindtools.a ../lib/libfind.a ../gl/lib/libgnulib.a $(LIBINTL) $(LIB_C
 
 SUBDIRS = . testsuite
 
+noinst_PROGRAMS = getlimits
+
 dist-hook: findutils-check-manpages
 
 # Clean coverage files generated by running binaries built with
